<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FunctionActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/common_title_bar"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:background="@color/bg_tag"
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dev_name" />

        <TextView
            android:id="@+id/tv_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/power" />

        <TextView
            android:id="@+id/tv_battery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/battery" />

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_top"
        android:background="@color/bg_tag" />

    <FrameLayout
        android:id="@+id/fl_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_navigation"
        android:layout_below="@id/view_line">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_title_bar"
        >

        <TextView
            android:background="@drawable/btn_tag_selector"
            android:id="@+id/tv_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tag_check"
            android:textSize="18sp" />

        <TextView
            android:background="@drawable/btn_tag_selector"
            android:id="@+id/tv_rw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tag_rw"
            android:textSize="18sp" />

        <TextView
            android:background="@drawable/btn_tag_selector"
            android:id="@+id/tv_permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tag_permission"
            android:textSize="18sp" />

        <TextView
            android:background="@drawable/btn_tag_selector"
            android:id="@+id/tv_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tag_settings"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>